--- a/money_mate/android/app/src/main/res/values/styles.xml
+++ b/money_mate/android/app/src/main/res/values/styles.xml
@@ -15,8 +15,11 @@
          Flutter UI initializes, as well as behind your Flutter UI while its
          running.
 
+    
          This Theme is only used starting with V2 of Flutter's Android embedding. -->
     <style name="NormalTheme" parent="@android:style/Theme.Light.NoTitleBar">
         <item name="android:windowBackground">?android:colorBackground</item>
     </style>
+
+      <color name="ic_launcher_background">#135ae1</color>
 </resources>
